Implemented edit form and runcitonality

--- a/views/pets.ejs
+++ b/views/pets.ejs
@@ -13,6 +13,7 @@
           <a href="<%= `/pets/${pet.id}` %>" title="Link to <%= pet.name %>">
           Get to know <%= pet.name %>
           </a>
+          <a href="<%= `/pets/${pet.id}/edit` %>">Edit</a>
         </header>
         <img src="<%= pet.imgURL %>" alt="photo of my dog">
       </section>
